--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PhonoManina</title>
+    <title>PhonoMania</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <h1>Welcome to PhonoManina</h1>
+        <h1>Welcome to PhonoMania</h1>
     </header>
     <main class="container">
         <div class="mb-3 w-50">
@@ -24,6 +24,10 @@
             <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4"></div>
             <div id="no-phone-msg" class="mt-4 d-none">
                 <h3 class="test-warning">No Phone found. Please try a new search</h3>
+            </div>
+
+            <div id="show-all" class="text-center d-none">
+                <div id="btn-show-all" class="btn btn-primary">Show All</div>
             </div>
         </section>
 
